# lib/api-spec/openapi.yaml
@@ -179,6 +179,9 @@ components:
         fullImageUrl:
           type: string
           nullable: true
+        quantityAvailable:
+          type: integer
+          nullable: true
       required:
         - id
         - name
@@ -188,6 +191,7 @@ components:
         - netsuiteId
         - imageUrl
         - fullImageUrl
+        - quantityAvailable
     ProductListResponse:
       type: object
       properties:
